fixed menu z-index

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -297,7 +297,7 @@
 
     align-items: center;
     background: linear-gradient(#ffffff, #e9e9e9);
-    z-index: 1;
+    z-index: 2;
 
     @media screen and (max-width: 500px) {
         width: 40px;
